# ros-global-localization

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker.sh  install_requirements.sh  package.xml
.github/workflows/: catkin_build.yml
config/: params.yaml  rviz.rviz
include/: PCRegistration.h  app_exception.h
launch/: run.launch  run_pc_global_localization.launch  run_pc_global_localization_with_rviz.launch  run_with_rviz.launch  rviz.launch
libs/Fast-Global-Registration/: CMakeLists.txt
libs/Fast-Global-Registration/include/: app.h
libs/Fast-Global-Registration/src/: app.cpp
libs/TEASER-plusplus/: CMakeLists.txt
libs/TEASER-plusplus/teaser/: CMakeLists.txt
libs/TEASER-plusplus/teaser/src/: graph.cc
libs/WHI-3D-Local-Descriptor/: CMakeLists.txt
libs/WHI-3D-Local-Descriptor/include/WHI/: WHI.h
libs/WHI-3D-Local-Descriptor/src/: WHI.cpp
libs/hnsw/: CMakeLists.txt
libs/pmc/: CMakeLists.txt
scripts/: run.sh  run_pc_global_localization.sh  run_pc_global_localization_with_rviz.sh  run_with_rviz.sh
src/: PCGlobalLocalizationROS.cpp  PCRegistration.cpp  app_exception.cpp  node.cpp
test/: main.cpp
