<?xml version="1.0"?>
<package format="2">
  <name>hapcl_registration</name>
  <version>0.0.0</version>
  <description>The Hybrid_Approach_Point_Cloud_Registration package</description>

  <maintainer email="ponomarevda96@gmail.com">Dmitry ponomarev</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <export>
  </export>
</package>
