<?xml version="1.0"?>
<package format="2">
  <name>hapcl_registration</name>
  <version>0.0.0</version>
  <description>The Hybrid Approach Point Cloud Registration package</description>

  <maintainer email="ponomarevda96@gmail.com">Dmitry ponomarev</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <!-- Message types used -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
